feat: create preliminary food list

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -40,7 +40,7 @@
     "    pub pozvan: bool,\n",
     "    pub dolazi: bool,\n",
     "    pub osoba: u32,\n",
-    "    pub vegan: bool,\n",
+    "    pub vegan: bool, // at this point, ovo znaci vegetarijansko, al me mrzi da menjam\n",
     "    pub bezglutenski: bool,\n",
     "}\n",
     "\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno para: 16860 din\n",
-      "Za 38 ljudi\n",
-      "Za 13.5 vegana\n",
-      "Za 0 bezglutenskih\n"
+      "Ukupno para: 0 din\n",
+      "Za 51.2 ljudi\n",
+      "Za 27 vegana\n",
+      "Za 41 bezglutenskih\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
     "    pub cena: u32,\n",
     "    pub komada: u32,\n",
     "    pub ljudi: f64,\n",
-    "    pub vegansko: bool,\n",
+    "    pub vegansko: bool, // at this point, ovo znaci vegetarijansko, al me mrzi da menjam\n",
     "    pub bezglutensko: bool,\n",
     "}\n",
     "\n",
@@ -185,44 +185,44 @@
     "\n",
     "// http://www.lavcakes.rs/vesti/clanak/ketering-za-vas-dogadjaj-koliko-hrane-naruciti daje reference za koliko ljudi koliko cega\n",
     "let posluzenje = vec![\n",
-    "    Posluzenje::new(\"Rebarca kg\")\n",
-    "        .url(\"https://youtu.be/jfAe3Axrw7I\")\n",
-    "        .cena(900) // u meso marketu\n",
+    "    Posluzenje::new(\"Pecenje kg\")\n",
+    "        .url(\"Marinkovic\")\n",
+    "        .bezglutensko()\n",
     "        .za(2.)\n",
     "        .komada(5),\n",
-    "    Posluzenje::new(\"Skordalja, kg\")\n",
+    "    Posluzenje::new(\"Krompir pire, kg\")\n",
+    "        .url(\"Ruben\")\n",
     "        .vegansko()\n",
+    "        .bezglutensko()\n",
     "        .za(4.)\n",
     "        .komada(2),\n",
-    "    Posluzenje::new(\"Spanakorizo, kg\")\n",
+    "    Posluzenje::new(\"Sarme, glavica\")\n",
     "        .vegansko()\n",
-    "        .za(3.),\n",
-    "    Posluzenje::new(\"Ruska salata\")\n",
-    "        .za(4.), // ? (turci dodaju pavlaku uz majonez, mozda ima smisla)\n",
-    "    Posluzenje::new(\"Sendvici\")\n",
-    "        .url(\"Stankovi neki sa fakulteta\")\n",
-    "        .cena(10500)\n",
-    "        .za(10.),\n",
-    "    Posluzenje::new(\"Masline sa paprikama, kutija\")\n",
-    "        .url(\"Aroma\")\n",
-    "        .cena(300) // nemam pojma, recimo 300\n",
-    "        .za(0.5)\n",
-    "        .vegansko()\n",
+    "        .bezglutensko()\n",
+    "        .za(5.)\n",
     "        .komada(3),\n",
-    "    Posluzenje::new(\"Urnebes, 500g\")\n",
-    "        .url(\"Zlatiborski specijaliteti\")\n",
-    "        .cena(500) // nemam pojma\n",
-    "        .za(0.5),\n",
-    "    Posluzenje::new(\"Kiseli kupus, kg\")\n",
-    "        .url(\"Aroma\")\n",
-    "        .cena(200) // nemam pojma\n",
+    "    Posluzenje::new(\"Originalna Olivije salata\")\n",
+    "        .bezglutensko()\n",
+    "        .za(4.),\n",
+    "    Posluzenje::new(\"Prebranac, kg\")\n",
+    "        .za(10.),\n",
+    "    Posluzenje::new(\"Kremasti kukuruz\")\n",
+    "        .url(\"https://youtu.be/WlNvvCwOwzI\")\n",
+    "        .za(0.5)\n",
+    "        .vegansko() // ako izbacim slaninu…\n",
+    "        .bezglutensko() // ako iskoristim kukuruzno brasno…\n",
+    "        .komada(7),\n",
+    "    Posluzenje::new(\"Fokaca\")\n",
+    "        .za(0.2),\n",
+    "    Posluzenje::new(\"Grilovana palenta, kg\")\n",
+    "        .url(\"https://youtu.be/wtlfcHmfKW0\")\n",
     "        .vegansko()\n",
-    "        .za(0.5),\n",
-    "    Posluzenje::new(\"Paket ljutih papricica\")\n",
-    "        .url(\"Aroma\")\n",
-    "        .cena(260)\n",
+    "        .bezglutensko()\n",
+    "        .za(0.25),\n",
+    "    Posluzenje::new(\"Cimicuri, veza\")\n",
     "        .vegansko()\n",
-    "        .za(0.5),\n",
+    "        .bezglutensko()\n",
+    "        .za(0.25),\n",
     "];\n",
     "\n",
     "let para_za_posluzenje = posluzenje.iter().fold(0, |acc, p| acc + p.cena*p.komada);\n",
