fix: make focaca veganska again

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -213,6 +213,7 @@
     "        .bezglutensko() // ako iskoristim kukuruzno brasno…\n",
     "        .komada(7),\n",
     "    Posluzenje::new(\"Fokaca\")\n",
+    "        .vegansko()\n",
     "        .za(0.2),\n",
     "    Posluzenje::new(\"Grilovana palenta, kg\")\n",
     "        .url(\"https://youtu.be/wtlfcHmfKW0\")\n",
