fix: update potential invitee list for slava 2023

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -103,6 +103,9 @@
     "    Posetilac::new(\"Marko\"),\n",
     "    Posetilac::new(\"Isis\"),\n",
     "    Posetilac::new(\"Jovan\"),\n",
+    "    Posetilac::new(\"Jana\")\n",
+    "        .dodaj(1),\n",
+    "    Posetilac::new(\"Sismis\"),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
