fix: make prebranac bezglutenski i veganski

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -145,8 +145,8 @@
      "text": [
       "Ukupno para: 0 din\n",
       "Za 51.2 ljudi\n",
-      "Za 27 vegana\n",
-      "Za 41 bezglutenskih\n"
+      "Za 37.2 vegana\n",
+      "Za 51 bezglutenskih\n"
      ]
     }
    ],
@@ -208,6 +208,8 @@
     "        .bezglutensko()\n",
     "        .za(4.),\n",
     "    Posluzenje::new(\"Prebranac, kg\")\n",
+    "        .vegansko()\n",
+    "        .bezglutensko()\n",
     "        .za(10.),\n",
     "    Posluzenje::new(\"Kremasti kukuruz\")\n",
     "        .url(\"https://youtu.be/WlNvvCwOwzI\")\n",
