feat: update invitee list for slava 2023

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -29,7 +29,7 @@
       "Ukupno ljudi: 5\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
-      "Jos uvek nepozvanih: 15\n"
+      "Jos uvek nepozvanih: 17\n"
      ]
     }
    ],
@@ -106,6 +106,13 @@
     "    Posetilac::new(\"Jana\")\n",
     "        .dodaj(1),\n",
     "    Posetilac::new(\"Sismis\"),\n",
+    "    Posetilac::new(\"Pujo\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Goksi\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Milos\")\n",
+    "        .pozvan()\n",
+    "        .dodaj(1),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -255,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
    "outputs": [
@@ -339,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
    "outputs": [
@@ -347,11 +354,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (7.6× vise)\n",
-      "Suvise veganske hrane (13.5× vise)\n",
-      "Premalo bezglutenske hrane (inf× manje)\n",
+      "Suvise hrane (10.24× vise)\n",
+      "Suvise veganske hrane (37.2× vise)\n",
+      "Suvise bezglutenske hrane (51× vise)\n",
       "Suvise pica (6× vise)\n",
-      "Ukupan trosak za rodjendan: 25131 din\n"
+      "Ukupan trosak za rodjendan: 8271 din\n"
      ]
     }
    ],
