feat: invite all the planned people for slava 2023

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -26,10 +26,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 5\n",
+      "Ukupno ljudi: 10\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
-      "Jos uvek nepozvanih: 17\n"
+      "Jos uvek nepozvanih: 0\n"
      ]
     }
    ],
@@ -76,7 +76,10 @@
     "        .pozvana()\n",
     "        .bezglutenski()\n",
     "        .dolazi(),\n",
-    "    Posetilac::new(\"Mk\"),\n",
+    "    Posetilac::new(\"Mk\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Jelena\")\n",
     "        .vegan()\n",
     "        .pozvana()\n",
@@ -84,35 +87,56 @@
     "    Posetilac::new(\"Mrkic\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
-    "    Posetilac::new(\"Maksa\"),\n",
+    "    Posetilac::new(\"Maksa\")\n",
+    "        .pozvan(),\n",
     "    Posetilac::new(\"Laza\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
-    "    Posetilac::new(\"Nina\"),\n",
-    "    Posetilac::new(\"Olja\"),\n",
+    "    Posetilac::new(\"Nina\")\n",
+    "        .pozvana(),\n",
+    "    Posetilac::new(\"Olja\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvana(),\n",
     "    Posetilac::new(\"Marinko\")\n",
-    "        .dodaj(1),\n",
-    "    Posetilac::new(\"Lero\")\n",
-    "        .dodaj(1),\n",
-    "    Posetilac::new(\"Rista\"),\n",
-    "    Posetilac::new(\"Desa\"),\n",
-    "    Posetilac::new(\"Marin\"),\n",
-    "    Posetilac::new(\"Guda\"),\n",
-    "    Posetilac::new(\"Buda\"),\n",
-    "    Posetilac::new(\"Vlajko\"),\n",
-    "    Posetilac::new(\"Marko\"),\n",
-    "    Posetilac::new(\"Isis\"),\n",
-    "    Posetilac::new(\"Jovan\"),\n",
-    "    Posetilac::new(\"Jana\")\n",
-    "        .dodaj(1),\n",
-    "    Posetilac::new(\"Sismis\"),\n",
-    "    Posetilac::new(\"Pujo\")\n",
+    "        .dodaj(1)\n",
     "        .pozvan(),\n",
+    "    Posetilac::new(\"Lero\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Rista\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Desa\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Guda\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Buda\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Vlajko\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Marko\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Isis\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvana(),\n",
+    "    Posetilac::new(\"Jovan\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Jana\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvana(),\n",
+    "    Posetilac::new(\"Sismis\")\n",
+    "        .pozvan(),\n",
+    "    Posetilac::new(\"Pujo\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Goksi\")\n",
     "        .pozvan(),\n",
     "    Posetilac::new(\"Milos\")\n",
     "        .pozvan()\n",
     "        .dodaj(1),\n",
+    "    Posetilac::new(\"Vasa\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
@@ -354,10 +378,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (10.24× vise)\n",
+      "Suvise hrane (5.12× vise)\n",
       "Suvise veganske hrane (37.2× vise)\n",
       "Suvise bezglutenske hrane (51× vise)\n",
-      "Suvise pica (6× vise)\n",
+      "Suvise pica (3× vise)\n",
       "Ukupan trosak za rodjendan: 8271 din\n"
      ]
     }
