feat: update invitee list

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 10\n",
+      "Ukupno ljudi: 16\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
       "Jos uvek nepozvanih: 0\n"
@@ -102,7 +102,8 @@
     "        .pozvan(),\n",
     "    Posetilac::new(\"Lero\")\n",
     "        .dodaj(1)\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Rista\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -125,15 +126,18 @@
     "        .dodaj(1)\n",
     "        .pozvana(),\n",
     "    Posetilac::new(\"Sismis\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Pujo\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Goksi\")\n",
-    "        .pozvan(),\n",
-    "    Posetilac::new(\"Milos\")\n",
     "        .pozvan()\n",
-    "        .dodaj(1),\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Milos\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Vasa\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -157,6 +161,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16198aae-69f9-4c54-8d04-92922b826d21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "fc26fe8a-b422-449a-9c81-dce90056ffc9",
    "metadata": {},
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -286,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
    "outputs": [
@@ -370,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
    "outputs": [
@@ -378,10 +390,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (5.12× vise)\n",
+      "Suvise hrane (3.6571428571428575× vise)\n",
       "Suvise veganske hrane (37.2× vise)\n",
       "Suvise bezglutenske hrane (51× vise)\n",
-      "Suvise pica (3× vise)\n",
+      "Suvise pica (2.142857142857143× vise)\n",
       "Ukupan trosak za rodjendan: 8271 din\n"
      ]
     }
