feat: update invitee statuses

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -108,11 +108,13 @@
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Desa\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Guda\")\n",
     "        .pozvan(),\n",
     "    Posetilac::new(\"Buda\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Vlajko\")\n",
     "        .pozvan(),\n",
     "    Posetilac::new(\"Marko\")\n",
@@ -121,10 +123,12 @@
     "        .dodaj(1)\n",
     "        .pozvana(),\n",
     "    Posetilac::new(\"Jovan\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Jana\")\n",
     "        .dodaj(1)\n",
-    "        .pozvana(),\n",
+    "        .pozvana()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Sismis\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
