feat: update invitee status

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 21\n",
+      "Ukupno ljudi: 24\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
       "Jos uvek nepozvanih: 0\n"
@@ -118,10 +118,12 @@
     "    Posetilac::new(\"Vlajko\")\n",
     "        .pozvan(),\n",
     "    Posetilac::new(\"Marko\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Isis\")\n",
     "        .dodaj(1)\n",
-    "        .pozvana(),\n",
+    "        .pozvana()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Jovan\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -386,10 +388,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (2.4380952380952383× vise)\n",
+      "Suvise hrane (2.1333333333333333× vise)\n",
       "Suvise veganske hrane (37.2× vise)\n",
       "Suvise bezglutenske hrane (51× vise)\n",
-      "Suvise pica (1.4285714285714286× vise)\n",
+      "Suvise pica (1.25× vise)\n",
       "Ukupan trosak za rodjendan: 8271 din\n"
      ]
     }
