feat: update invitee statuses

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 24\n",
+      "Ukupno ljudi: 25\n",
       "Ukupno vegana: 1\n",
       "Ukupno bezglutenskih: 1\n",
       "Jos uvek nepozvanih: 0\n"
@@ -88,7 +88,8 @@
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Maksa\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(), // na kratko\n",
     "    Posetilac::new(\"Laza\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -388,10 +389,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (2.1333333333333333× vise)\n",
+      "Suvise hrane (2.048× vise)\n",
       "Suvise veganske hrane (37.2× vise)\n",
       "Suvise bezglutenske hrane (51× vise)\n",
-      "Suvise pica (1.25× vise)\n",
+      "Suvise pica (1.2× vise)\n",
       "Ukupan trosak za rodjendan: 8271 din\n"
      ]
     }
