feat: update invitees

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -18,21 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ukupno ljudi: 25\n",
-      "Ukupno vegana: 1\n",
-      "Ukupno bezglutenskih: 1\n",
-      "Jos uvek nepozvanih: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Posetilac {\n",
@@ -112,7 +101,8 @@
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Guda\")\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Buda\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -148,6 +138,12 @@
     "    Posetilac::new(\"Vasa\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
+    "    Posetilac::new(\"Jela\")\n",
+    "        .pozvana()\n",
+    "        .dolazi(),\n",
+    "    Posetilac::new(\"Dzigi\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
@@ -177,21 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ukupno para: 0 din\n",
-      "Za 51.2 ljudi\n",
-      "Za 37.2 vegana\n",
-      "Za 51 bezglutenskih\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Posluzenje {\n",
@@ -297,19 +282,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ukupno para: 8271 din\n",
-      "Za 30 ljudi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Pice {\n",
@@ -381,22 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suvise hrane (2.048× vise)\n",
-      "Suvise veganske hrane (37.2× vise)\n",
-      "Suvise bezglutenske hrane (51× vise)\n",
-      "Suvise pica (1.2× vise)\n",
-      "Ukupan trosak za rodjendan: 8271 din\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let hrana = hrane_za_ljudi / ukupno_ljudi as f64;\n",
     "if hrana > 1. {\n",
