feat: update once again the invitee list

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ukupno ljudi: 30\n",
+      "Ukupno vegana: 1\n",
+      "Ukupno bezglutenskih: 1\n",
+      "Jos uvek nepozvanih: 0\n"
+     ]
+    }
+   ],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Posetilac {\n",
@@ -83,7 +94,8 @@
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Nina\")\n",
-    "        .pozvana(),\n",
+    "        .pozvana()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Olja\")\n",
     "        .dodaj(1)\n",
     "        .pozvana(),\n",
@@ -108,7 +120,7 @@
     "        .dolazi(),\n",
     "    Posetilac::new(\"Vlajko\")\n",
     "        .pozvan(),\n",
-    "    Posetilac::new(\"Marko\")\n",
+    "    Posetilac::new(\"Marko Jankovic\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Isis\")\n",
@@ -144,6 +156,9 @@
     "    Posetilac::new(\"Dzigi\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
+    "    Posetilac::new(\"Marko\")\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
@@ -173,10 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ukupno para: 0 din\n",
+      "Za 51.2 ljudi\n",
+      "Za 37.2 vegana\n",
+      "Za 51 bezglutenskih\n"
+     ]
+    }
+   ],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Posluzenje {\n",
@@ -282,10 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ukupno para: 8271 din\n",
+      "Za 30 ljudi\n"
+     ]
+    }
+   ],
    "source": [
     "#[derive(Debug, Clone)]\n",
     "struct Pice {\n",
@@ -357,10 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suvise hrane (1.7066666666666668× vise)\n",
+      "Suvise veganske hrane (37.2× vise)\n",
+      "Suvise bezglutenske hrane (51× vise)\n",
+      "Premalo pica (1× manje)\n",
+      "Ukupan trosak za rodjendan: 8271 din\n"
+     ]
+    }
+   ],
    "source": [
     "let hrana = hrane_za_ljudi / ukupno_ljudi as f64;\n",
     "if hrana > 1. {\n",
