fix: update food and beverages for slava

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -89,10 +89,9 @@
     "        .dolazi(),\n",
     "    Posetilac::new(\"Maksa\")\n",
     "        .pozvan()\n",
-    "        .dolazi(), // na kratko\n",
-    "    Posetilac::new(\"Laza\")\n",
-    "        .pozvan()\n",
     "        .dolazi(),\n",
+    "    Posetilac::new(\"Laza\")\n",
+    "        .pozvan(),\n",
     "    Posetilac::new(\"Nina\")\n",
     "        .pozvana()\n",
     "        .dolazi(),\n",
@@ -101,7 +100,8 @@
     "        .pozvana(),\n",
     "    Posetilac::new(\"Marinko\")\n",
     "        .dodaj(1)\n",
-    "        .pozvan(),\n",
+    "        .pozvan()\n",
+    "        .dolazi(),\n",
     "    Posetilac::new(\"Lero\")\n",
     "        .dodaj(1)\n",
     "        .pozvan()\n",
@@ -128,8 +128,7 @@
     "        .pozvana()\n",
     "        .dolazi(),\n",
     "    Posetilac::new(\"Jovan\")\n",
-    "        .pozvan()\n",
-    "        .dolazi(),\n",
+    "        .pozvan(),\n",
     "    Posetilac::new(\"Jana\")\n",
     "        .dodaj(1)\n",
     "        .pozvana()\n",
@@ -197,9 +196,9 @@
      "output_type": "stream",
      "text": [
       "Ukupno para: 0 din\n",
-      "Za 51.2 ljudi\n",
-      "Za 37.2 vegana\n",
-      "Za 51 bezglutenskih\n"
+      "Za 52.25 ljudi\n",
+      "Za 44.25 vegana\n",
+      "Za 44.25 bezglutenskih\n"
      ]
     }
    ],
@@ -241,47 +240,32 @@
     "\n",
     "// http://www.lavcakes.rs/vesti/clanak/ketering-za-vas-dogadjaj-koliko-hrane-naruciti daje reference za koliko ljudi koliko cega\n",
     "let posluzenje = vec![\n",
-    "    Posluzenje::new(\"Pecenje kg\")\n",
-    "        .url(\"Marinkovic\")\n",
-    "        .bezglutensko()\n",
-    "        .za(2.)\n",
-    "        .komada(5),\n",
     "    Posluzenje::new(\"Krompir pire, kg\")\n",
     "        .url(\"Ruben\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(4.)\n",
     "        .komada(2),\n",
-    "    Posluzenje::new(\"Sarme, glavica\")\n",
+    "    Posluzenje::new(\"Sarme, veganske, glavica\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
-    "        .za(5.)\n",
-    "        .komada(3),\n",
-    "    Posluzenje::new(\"Originalna Olivije salata\")\n",
-    "        .bezglutensko()\n",
-    "        .za(4.),\n",
-    "    Posluzenje::new(\"Prebranac, kg\")\n",
-    "        .vegansko()\n",
-    "        .bezglutensko()\n",
-    "        .za(10.),\n",
-    "    Posluzenje::new(\"Kremasti kukuruz\")\n",
-    "        .url(\"https://youtu.be/WlNvvCwOwzI\")\n",
-    "        .za(0.5)\n",
-    "        .vegansko() // ako izbacim slaninu…\n",
-    "        .bezglutensko() // ako iskoristim kukuruzno brasno…\n",
-    "        .komada(7),\n",
-    "    Posluzenje::new(\"Fokaca\")\n",
-    "        .vegansko()\n",
-    "        .za(0.2),\n",
+    "        .za(10.)\n",
+    "        .komada(2),\n",
     "    Posluzenje::new(\"Grilovana palenta, kg\")\n",
     "        .url(\"https://youtu.be/wtlfcHmfKW0\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
-    "        .za(0.25),\n",
+    "        .za(8.),\n",
     "    Posluzenje::new(\"Cimicuri, veza\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(0.25),\n",
+    "    Posluzenje::new(\"Lazanje, kg\")\n",
+    "        .za(8.),\n",
+    "    Posluzenje::new(\"Dalmatinsko varivo, kg\")\n",
+    "        .vegansko()\n",
+    "        .bezglutensko()\n",
+    "        .za(8.),\n",
     "];\n",
     "\n",
     "let para_za_posluzenje = posluzenje.iter().fold(0, |acc, p| acc + p.cena*p.komada);\n",
@@ -316,8 +300,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno para: 8271 din\n",
-      "Za 30 ljudi\n"
+      "Ukupno para: 4800 din\n",
+      "Za 47.5 ljudi\n"
      ]
     }
    ],
@@ -346,34 +330,28 @@
     "}\n",
     "\n",
     "let pice = vec![\n",
-    "    Pice::new(\"Badvajzer\")\n",
+    "    Pice::new(\"Pivo\")\n",
     "        .ljudi(0.25)\n",
-    "        .cena(86)\n",
-    "        .komada(24),\n",
-    "    Pice::new(\"Amstel\")\n",
-    "        .ljudi(0.25)\n",
-    "        .cena(59)\n",
-    "        .komada(24),\n",
-    "    Pice::new(\"Belo vino\")\n",
+    "        .cena(100) // za azuriranje\n",
+    "        .komada(48),\n",
+    "    Pice::new(\"Vino\")\n",
     "        .ljudi(0.5)\n",
-    "        .cena(600) // odokativno\n",
-    "        .komada(3),\n",
-    "    Pice::new(\"Rakija\") // popadic dunja sa kalenica\n",
+    "        .komada(8), // vec imam\n",
+    "    Pice::new(\"Rakija\")\n",
     "        .ljudi(3.0)\n",
-    "        .cena(1000)\n",
-    "        .komada(1),\n",
-    "    Pice::new(\"Viski iz tim99\")\n",
-    "        .ljudi(3.0)\n",
-    "        .cena(1500) // cini mi se\n",
-    "        .komada(1),\n",
+    "        .komada(2), // vec imam\n",
     "    Pice::new(\"Koka-kola\")\n",
     "        .ljudi(1.5)\n",
-    "        .cena(108)\n",
-    "        .komada(2),\n",
+    "        .komada(4), // vec imam\n",
     "    Pice::new(\"Kisela voda\")\n",
     "        .ljudi(1.5)\n",
-    "        .cena(55)\n",
     "        .komada(5),\n",
+    "    Pice::new(\"Dzin\")\n",
+    "        .ljudi(3.0)\n",
+    "        .komada(2), // vec imam\n",
+    "    Pice::new(\"Tonik\")\n",
+    "        .ljudi(3.0)\n",
+    "        .komada(2), // vec imam\n",
     "];\n",
     "\n",
     "let para_za_pice = pice.iter().fold(0, |acc, p| acc + p.cena*p.komada);\n",
@@ -400,11 +378,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (1.7066666666666668× vise)\n",
-      "Suvise veganske hrane (37.2× vise)\n",
-      "Suvise bezglutenske hrane (51× vise)\n",
-      "Premalo pica (1× manje)\n",
-      "Ukupan trosak za rodjendan: 8271 din\n"
+      "Suvise hrane (1.7416666666666667× vise)\n",
+      "Suvise veganske hrane (44.25× vise)\n",
+      "Suvise bezglutenske hrane (44.25× vise)\n",
+      "Suvise pica (1.5833333333333333× vise)\n",
+      "Ukupan trosak za rodjendan: 4800 din\n"
      ]
     }
    ],
