fix: update invitee list, food and drinks for slava

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
    "outputs": [
@@ -28,8 +28,7 @@
      "text": [
       "Ukupno ljudi: 30\n",
       "Ukupno vegana: 1\n",
-      "Ukupno bezglutenskih: 1\n",
-      "Jos uvek nepozvanih: 0\n"
+      "Ukupno bezglutenskih: 1\n"
      ]
     }
    ],
@@ -158,6 +157,9 @@
     "    Posetilac::new(\"Marko\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
+    "    Posetilac::new(\"Marija\")\n",
+    "        .dodaj(1)\n",
+    "        .pozvana(),\n",
     "];\n",
     "\n",
     "let ukupno_ljudi = pozvani.iter().fold(0, |acc, p| {\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -195,10 +197,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno para: 0 din\n",
-      "Za 52.25 ljudi\n",
-      "Za 44.25 vegana\n",
-      "Za 44.25 bezglutenskih\n"
+      "Ukupno para: 5780 din\n",
+      "Za 76 ljudi\n",
+      "Za 56 vegana\n",
+      "Za 56 bezglutenskih\n"
      ]
     }
    ],
@@ -240,32 +242,40 @@
     "\n",
     "// http://www.lavcakes.rs/vesti/clanak/ketering-za-vas-dogadjaj-koliko-hrane-naruciti daje reference za koliko ljudi koliko cega\n",
     "let posluzenje = vec![\n",
-    "    Posluzenje::new(\"Krompir pire, kg\")\n",
-    "        .url(\"Ruben\")\n",
+    "    Posluzenje::new(\"Skordalja, kg\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(4.)\n",
     "        .komada(2),\n",
     "    Posluzenje::new(\"Sarme, veganske, glavica\")\n",
+    "        .cena(220+700) // 220 = kilo pirinca\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(10.)\n",
     "        .komada(2),\n",
+    "    Posluzenje::new(\"Rebarca, kg\")\n",
+    "        .cena(1000)\n",
+    "        .bezglutensko()\n",
+    "        .za(4.)\n",
+    "        .komada(3),\n",
     "    Posluzenje::new(\"Grilovana palenta, kg\")\n",
     "        .url(\"https://youtu.be/wtlfcHmfKW0\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(8.),\n",
-    "    Posluzenje::new(\"Cimicuri, veza\")\n",
-    "        .vegansko()\n",
-    "        .bezglutensko()\n",
-    "        .za(0.25),\n",
     "    Posluzenje::new(\"Lazanje, kg\")\n",
     "        .za(8.),\n",
-    "    Posluzenje::new(\"Dalmatinsko varivo, kg\")\n",
+    "    Posluzenje::new(\"Salata, kesa\")\n",
+    "        .cena(200)\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
-    "        .za(8.),\n",
+    "        .za(4.)\n",
+    "        .komada(2),\n",
+    "    Posluzenje::new(\"Rustik hleb, Sarlo\")\n",
+    "        .cena(180) // ili tako nesto\n",
+    "        .vegansko()\n",
+    "        .za(4.)\n",
+    "        .komada(3),\n",
     "];\n",
     "\n",
     "let para_za_posluzenje = posluzenje.iter().fold(0, |acc, p| acc + p.cena*p.komada);\n",
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
    "outputs": [
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
    "outputs": [
@@ -378,11 +388,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (1.7416666666666667× vise)\n",
-      "Suvise veganske hrane (44.25× vise)\n",
-      "Suvise bezglutenske hrane (44.25× vise)\n",
+      "Suvise hrane (2.533333333333333× vise)\n",
+      "Suvise veganske hrane (56× vise)\n",
+      "Suvise bezglutenske hrane (56× vise)\n",
       "Suvise pica (1.5833333333333333× vise)\n",
-      "Ukupan trosak za rodjendan: 4800 din\n"
+      "Ukupan trosak za slavu: 10580 din\n"
      ]
     }
    ],
@@ -416,7 +426,7 @@
     "}\n",
     "\n",
     "let ukupan_trosak = para_za_posluzenje + para_za_pice;\n",
-    "println!(\"Ukupan trosak za rodjendan: {} din\", &ukupan_trosak);"
+    "println!(\"Ukupan trosak za slavu: {} din\", &ukupan_trosak);"
    ]
   }
  ],
