feat: complete the document for slava

--- a/Slava2023.ipynb
+++ b/Slava2023.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4a7d5685-1926-4a44-a2eb-9fd6891cfa3a",
    "metadata": {},
    "outputs": [
@@ -26,9 +26,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno ljudi: 30\n",
+      "Ukupno ljudi: 28\n",
       "Ukupno vegana: 1\n",
-      "Ukupno bezglutenskih: 1\n"
+      "Ukupno bezglutenskih: 1\n",
+      "Jos uvek nepozvanih: 0\n"
      ]
     }
    ],
@@ -103,8 +104,7 @@
     "        .dolazi(),\n",
     "    Posetilac::new(\"Lero\")\n",
     "        .dodaj(1)\n",
-    "        .pozvan()\n",
-    "        .dolazi(),\n",
+    "        .pozvan(), // ne moze\n",
     "    Posetilac::new(\"Rista\")\n",
     "        .pozvan()\n",
     "        .dolazi(),\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "ddfe3308-64e6-4893-9274-243d3cb5e980",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ukupno para: 5780 din\n",
+      "Ukupno para: 5540 din\n",
       "Za 76 ljudi\n",
       "Za 56 vegana\n",
       "Za 56 bezglutenskih\n"
@@ -243,17 +243,20 @@
     "// http://www.lavcakes.rs/vesti/clanak/ketering-za-vas-dogadjaj-koliko-hrane-naruciti daje reference za koliko ljudi koliko cega\n",
     "let posluzenje = vec![\n",
     "    Posluzenje::new(\"Skordalja, kg\")\n",
+    "        .url(\"https://github.com/brcha/recepti/blob/master/Grcki/Skordalja.md\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(4.)\n",
     "        .komada(2),\n",
     "    Posluzenje::new(\"Sarme, veganske, glavica\")\n",
     "        .cena(220+700) // 220 = kilo pirinca\n",
+    "        .url(\"https://github.com/brcha/recepti/blob/master/Domaci/posna_sarma.md\")\n",
     "        .vegansko()\n",
     "        .bezglutensko()\n",
     "        .za(10.)\n",
     "        .komada(2),\n",
     "    Posluzenje::new(\"Rebarca, kg\")\n",
+    "        .url(\"https://github.com/brcha/recepti/blob/master/Domaci/rebarca_u_pivu.md\")\n",
     "        .cena(1000)\n",
     "        .bezglutensko()\n",
     "        .za(4.)\n",
@@ -271,8 +274,8 @@
     "        .bezglutensko()\n",
     "        .za(4.)\n",
     "        .komada(2),\n",
-    "    Posluzenje::new(\"Rustik hleb, Sarlo\")\n",
-    "        .cena(180) // ili tako nesto\n",
+    "    Posluzenje::new(\"Hleb neki\")\n",
+    "        .cena(100) // ili tako nesto\n",
     "        .vegansko()\n",
     "        .za(4.)\n",
     "        .komada(3),\n",
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "a6b71d78-60c6-4145-9802-c9ecbf8044a1",
    "metadata": {},
    "outputs": [
@@ -380,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "71d2fd97-5e60-4b42-8316-8f809d42c9a3",
    "metadata": {},
    "outputs": [
@@ -388,11 +391,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Suvise hrane (2.533333333333333× vise)\n",
+      "Suvise hrane (2.7142857142857144× vise)\n",
       "Suvise veganske hrane (56× vise)\n",
       "Suvise bezglutenske hrane (56× vise)\n",
-      "Suvise pica (1.5833333333333333× vise)\n",
-      "Ukupan trosak za slavu: 10580 din\n"
+      "Suvise pica (1.6964285714285714× vise)\n",
+      "Ukupan trosak za slavu: 10340 din\n"
      ]
     }
    ],
